# police-project

./: README.md  bounding_boxes.py
tess_rest/: Dockerfile  pyproject.toml
tess_rest/tess_rest/: main.py
tess_rest/tests/: test_tess_rest.py
train-tesseract/: install_german.sh
train-tesseract/german_dataset/: 1.gt.txt  10.gt.txt  10.tif  11.tif  12.tif  13.gt.txt  13.tif  2.gt.txt  4.gt.txt  4.tif  5.tif  6.tif  8.gt.txt  8.tif  9.tif
train-tesseract/src/: test.py
train-tesseract/test_g/: 1.tif  2.tif  3.gt.txt  3.tif  5.gt.txt  7.tif
